--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/productDb
 spring.datasource.username=admin
 spring.datasource.password=admin1234
+
+app.jwt.secret = 1a5b1a3s5q97t5a1ba
